@@ -23,6 +23,8 @@
 <ul>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
 dependency bumped to 2.13.2.0. </li>
+ <li> New <tt>-s</tt> option to <a href="s6-svc.html">s6-svc</a>. </li>
+ <li> New <tt>-t</tt> option to <a href="s6-log.html">s6-log</a>. </li>
 </ul>
 
 <h2> in 2.11.3.2 </h2>
